--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>THis is about</h1>
+    <h1>THis is about </h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed doloribus saepe ipsam eos nulla libero magni omnis nostrum, numquam eligendi enim sapiente quia minus consectetur! Molestias natus voluptate accusantium, iste, impedit cum nobis nemo omnis placeat eius id sed provident labore consectetur similique quod! Molestias ratione earum doloremque cupiditate dolores.</p>
 </body>
 </html>
